--- a/lab7/lab7-trees_and_ensembles.ipynb
+++ b/lab7/lab7-trees_and_ensembles.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -46,8 +46,8 @@
     "index = int(frac_of_dataset*X_mnist.shape[0])\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_mnist[:index,:], y_mnist[:index], test_size=0.2, random_state=5)\n",
     "\n",
-    "num_models = 20\n",
-    "sample_size = 2000  # training set size.\n",
+    "num_models = 50\n",
+    "sample_size = 5000  # training set size.\n",
     "np.random.seed(0)\n",
     "\n",
     "all_models = []\n",
@@ -56,11 +56,16 @@
     "    # Sample with replacement from the training set. \n",
     "    # Each sample should contain sample_size data points chosen at random.\n",
     "    # Hint: look at the documentation for numpy.random.choice().\n",
-    "        \n",
+    "    \n",
+    "    indices = np.random.choice(X_train.shape[0], sample_size, replace=True)\n",
+    "    \n",
+    "    X_sample, y_sample = X_train[indices], y_train[indices]\n",
+    "\n",
     "    model = DecisionTreeClassifier()\n",
     "    \n",
     "    # TODO\n",
     "    # train a decision tree classifier on the random sample.\n",
+    "    model.fit(X_sample, y_sample)\n",
     "    \n",
     "    all_models.append(model)"
    ]
@@ -76,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,21 +94,33 @@
     "        # TODO\n",
     "        # obtain the predictions from model m for the test data and\n",
     "        # populate the votes vector\n",
+    "        predictions = m.predict(test_data)\n",
+    "        votes[:,idx] = predictions\n",
     "        \n",
     "    for test_point in range(votes.shape[0]):\n",
     "        # TODO\n",
     "        # determine the class with the most votes for each test point\n",
     "        # and populate the combined_predictions \n",
     "        # hint use np.bincount\n",
+    "        most_voted = np.argmax(np.bincount(votes[test_point,:].astype(int)))\n",
+    "        combined_predictions[test_point] = most_voted\n",
     "    \n",
     "    return combined_predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set accuracy: 0.9342857142857143\n"
+     ]
+    }
+   ],
    "source": [
     "prediction = bagging_predict(X_test, all_models)\n",
     "accuracy = np.count_nonzero(prediction==np.int64(y_test))/y_test.shape[0]\n",
@@ -135,12 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_models = 20\n",
-    "sample_size = 2000  # training set size.\n",
+    "num_models = 30\n",
+    "sample_size = 4000  # training set size.\n",
     "feature_sample_size = 200\n",
     "np.random.seed(0)\n",
     "\n",
@@ -151,14 +168,16 @@
     "    # copy in your code from the bagging exercise here to sample with replacement from the training set. \n",
     "    # Each sample should contain sample_size data points chosen at random.\n",
     "    # Hint: look at the documentation for numpy.random.choice().\n",
+    "    indices = np.random.choice(X_train.shape[0], sample_size, replace=True)\n",
+    "    X_sample, y_sample = X_train[indices], y_train[indices]\n",
+    "    \n",
+    "    feature_indices = np.random.choice(X_train.shape[1], feature_sample_size, replace=False)\n",
+    "    all_selected_features.append(feature_indices)\n",
     "\n",
     "    # TODO\n",
-    "    # create a decision tree classifier with limited features considered\n",
-    "    # for each split\n",
-    "    \n",
-    "    # TODO\n",
-    "    # copy in your code from the bagging exercise here to train a decision tree classifier on the random sample.\n",
-    "    # Remember to train it only on the random sample of features.\n",
+    "    # create a decision tree classifier with limited features considered for each split\n",
+    "    decision_tree = DecisionTreeClassifier(max_features=feature_sample_size) \n",
+    "    decision_tree.fit(X_sample[:,feature_indices], y_sample)\n",
     "    \n",
     "    all_models.append(model)"
    ]
@@ -174,9 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set accuracy: 0.7657142857142857\n"
+     ]
+    }
+   ],
    "source": [
     "prediction = bagging_predict(X_test, all_models)\n",
     "accuracy = np.count_nonzero(prediction==np.int64(y_test))/y_test.shape[0]\n",
@@ -218,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,6 +255,9 @@
     "\n",
     "# TODO\n",
     "# initialise the sample weights for all data points in the training set.\n",
+    "n_estimators = 50\n",
+    "learning_rate = 1.0\n",
+    "sample_weights = np.ones(len(X_train)) / len(X_train)\n",
     "\n",
     "alphas = []\n",
     "all_models = []\n",
@@ -236,23 +266,30 @@
     "    # copy in your code from the bagging exercise here to sample with replacement from the training set. \n",
     "    # Each sample should contain sample_size data points chosen at random.\n",
     "    # Hint: look at the documentation for numpy.random.choice().\n",
+    "    indices = np.random.choice(X_train.shape[0], sample_size, replace=True)\n",
+    "    X_sample, y_sample = X_train[indices], y_train[indices]\n",
     "\n",
     "    model = DecisionTreeClassifier(max_depth=10)\n",
     "    \n",
     "    # TODO\n",
     "    # train a decision tree classifier on the weighted random sample.\n",
     "    # Hint: fit() takes an additional argument, 'sample_weights'.\n",
+    "    model.fit(X_sample, y_sample, sample_weight=sample_weights[indices])\n",
     "    \n",
     "    # TODO\n",
     "    # compute the model error using weighted accuracy for the sampled training dataset\n",
     "    # Hint: score() score takes an additional argument, 'sample_weight'.\n",
+    "    \n",
+    "    model_error = 1 - model.score(X_sample, y_sample, sample_weight=sample_weights[indices])\n",
     "\n",
     "    # TODO\n",
     "    # calculate alpha for the model and append alpha to alphas\n",
-    "   \n",
+    "    alpha = learning_rate * np.log((1 - model_error) / model_error)\n",
+    "    alphas.append(alpha)\n",
     "    \n",
     "    # TODO\n",
     "    # update the sample_weights for incorrect predictions using alpha\n",
+    "    sample_weights[indices] *= np.exp(alpha * (model.predict(X_sample) != y_sample))\n",
     "    \n",
     "    \n",
     "    all_models.append(model)"
@@ -268,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,21 +316,34 @@
     "    for idx, m in enumerate(all_models):\n",
     "        # TODO\n",
     "        # write your code here to obtain the predictions from model m and store it in votes.\n",
+    "        predictions = m.predict(test_data)\n",
+    "        votes[:,idx] = predictions\n",
     "        \n",
     "    \n",
     "    for test_point in range(len(votes)):\n",
     "        # TODO\n",
     "        # determine the class with the most votes for each test point and store it in combined_predictions\n",
     "        # hint: remember the weighting alpha\n",
+    "        most_voted = np.argmax(np.bincount(votes[test_point,:].astype(int), weights=alphas))\n",
+    "        combined_predictions[test_point] = most_voted\n",
+    "        \n",
     "    \n",
     "    return combined_predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set accuracy: 0.9322857142857143\n"
+     ]
+    }
+   ],
    "source": [
     "prediction = boosting_predict(X_test, all_models, alphas)\n",
     "accuracy = np.count_nonzero(prediction==np.int64(y_test))/y_test.shape[0]\n",
@@ -333,7 +383,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv-mluni",
    "language": "python",
    "name": "python3"
   },
@@ -347,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
